--- a/genindex.html
+++ b/genindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; larch 0.9.39 documentation</title>
+    <title>Index &#8212; larch 0.9.40 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -47,7 +47,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="General Index"
              accesskey="I">index</a></li>
-   <li>[<a href="index.html"> Larch Home</a>|</li>
+   <li>[<a href="index.html"> Larch</a>|</li>
    <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
@@ -313,6 +313,8 @@
       <li><a href="xafs/feffpaths.html#index-0">Feff Path Parameters</a>
 </li>
       <li><a href="xafs/feffpaths.html#_xafs.feff6l">feff6l() (in module _xafs)</a>
+</li>
+      <li><a href="xafs/feffpaths.html#_xafs.feff8l">feff8l() (in module _xafs)</a>
 </li>
       <li><a href="xafs/feffit.html#index-2">Feffit Output Arrays</a>
 </li>
@@ -802,7 +804,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="General Index"
              >index</a></li>
-   <li>[<a href="index.html"> Larch Home</a>|</li>
+   <li>[<a href="index.html"> Larch</a>|</li>
    <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
