--- a/guis/xasviewer.html
+++ b/guis/xasviewer.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>4.3. XASViewer &#8212; larch 0.9.39 documentation</title>
+    <title>4.3. XASViewer &#8212; larch 0.9.40 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -54,7 +54,7 @@
         <li class="right" >
           <a href="mapviewer.html" title="4.2. GSECARS Mapviewr"
              accesskey="P">previous</a> |</li>
-   <li>[<a href="../index.html"> Larch Home</a>|</li>
+   <li>[<a href="../index.html"> Larch</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
    <li><a href="../xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="../xray/index.html">X-ray Databases</a>|</li>
@@ -120,7 +120,7 @@
 <p>The XASViewer GUI uses Larch to read and display XAFS spectra.  This
 application is still in active development, with more features planned with
 special emphasis on helping users with XANES analysis.  Current features
-(as of June, 2018, Larch version 0.9.38) include:</p>
+(as of July, 2018, Larch version 0.9.40) include:</p>
 <blockquote>
 <div><ul class="simple">
 <li>read XAFS spectra from simple data column files or Athena Project Files.</li>
@@ -518,7 +518,7 @@ the results of PCA to ask:</p>
         <li class="right" >
           <a href="mapviewer.html" title="4.2. GSECARS Mapviewr"
              >previous</a> |</li>
-   <li>[<a href="../index.html"> Larch Home</a>|</li>
+   <li>[<a href="../index.html"> Larch</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
    <li><a href="../xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="../xray/index.html">X-ray Databases</a>|</li>
