--- a/xafs/feffit.html
+++ b/xafs/feffit.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>9.8. XAFS: Fitting XAFS to Feff Paths &#8212; larch 0.9.39 documentation</title>
+    <title>9.8. XAFS: Fitting XAFS to Feff Paths &#8212; larch 0.9.40 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -54,7 +54,7 @@
         <li class="right" >
           <a href="feffpaths.html" title="9.7. XAFS: Reading and using Feff Paths"
              accesskey="P">previous</a> |</li>
-   <li>[<a href="../index.html"> Larch Home</a>|</li>
+   <li>[<a href="../index.html"> Larch</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
    <li><a href="index.html">XAFS Analysis</a>|</li>
    <li><a href="../xray/index.html">X-ray Databases</a>|</li>
@@ -741,7 +741,7 @@ commands.</p>
  
 <span class="p">[[</span><span class="n">Variables</span><span class="p">]]</span>
    <span class="n">amp</span>            <span class="o">=</span>  <span class="mf">0.928280</span> <span class="o">+/-</span> <span class="mf">0.039477</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">1.000000</span><span class="p">)</span>
-   <span class="n">del_e0</span>         <span class="o">=</span>  <span class="mf">4.356280</span> <span class="o">+/-</span> <span class="mf">0.517286</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">0.000000</span><span class="p">)</span>
+   <span class="n">del_e0</span>         <span class="o">=</span>  <span class="mf">4.356281</span> <span class="o">+/-</span> <span class="mf">0.517286</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">0.000000</span><span class="p">)</span>
    <span class="n">del_r</span>          <span class="o">=</span> <span class="o">-</span><span class="mf">0.006018</span> <span class="o">+/-</span> <span class="mf">0.002643</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">0.000000</span><span class="p">)</span>
    <span class="n">sig2</span>           <span class="o">=</span>  <span class="mf">0.008668</span> <span class="o">+/-</span> <span class="mf">0.000311</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">0.000000</span><span class="p">)</span>
  
@@ -759,7 +759,7 @@ commands.</p>
      <span class="n">reff</span>   <span class="o">=</span>  <span class="mf">2.54780</span>
      <span class="n">degen</span>  <span class="o">=</span>  <span class="mf">12.000000</span>
      <span class="n">n</span><span class="o">*</span><span class="n">s02</span>  <span class="o">=</span>  <span class="mf">0.928280</span> <span class="o">+/-</span> <span class="mf">0.039477</span>  <span class="s1">&#39;amp&#39;</span>
-     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">4.356280</span> <span class="o">+/-</span> <span class="mf">0.517286</span>  <span class="s1">&#39;del_e0&#39;</span>
+     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">4.356281</span> <span class="o">+/-</span> <span class="mf">0.517286</span>  <span class="s1">&#39;del_e0&#39;</span>
      <span class="n">r</span>      <span class="o">=</span>  <span class="mf">2.541782</span> <span class="o">+/-</span> <span class="mf">0.002643</span>  <span class="s1">&#39;reff + del_r&#39;</span>
      <span class="n">deltar</span> <span class="o">=</span> <span class="o">-</span><span class="mf">0.006018</span> <span class="o">+/-</span> <span class="mf">0.002643</span>  <span class="s1">&#39;del_r&#39;</span>
      <span class="n">sigma2</span> <span class="o">=</span>  <span class="mf">0.008668</span> <span class="o">+/-</span> <span class="mf">0.000311</span>  <span class="s1">&#39;sig2&#39;</span>
@@ -1149,9 +1149,9 @@ of <span class="math notranslate nohighlight">\(R\)</span>. The output for this 
 <span class="p">[[</span><span class="n">Variables</span><span class="p">]]</span>
    <span class="n">alpha</span>          <span class="o">=</span>  <span class="mf">0.000006</span> <span class="o">+/-</span> <span class="mf">0.000008</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">0.000000</span><span class="p">)</span>
    <span class="n">amp</span>            <span class="o">=</span>  <span class="mf">0.869093</span> <span class="o">+/-</span> <span class="mf">0.030460</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">1.000000</span><span class="p">)</span>
-   <span class="n">del_e0</span>         <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612595</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">2.000000</span><span class="p">)</span>
+   <span class="n">del_e0</span>         <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612594</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">2.000000</span><span class="p">)</span>
    <span class="n">dr_off</span>         <span class="o">=</span> <span class="o">-</span><span class="mf">0.000559</span> <span class="o">+/-</span> <span class="mf">0.002877</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">0.000000</span><span class="p">)</span>
-   <span class="n">theta</span>          <span class="o">=</span>  <span class="mf">233.110563</span> <span class="o">+/-</span> <span class="mf">8.207756</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">250.000000</span><span class="p">)</span>
+   <span class="n">theta</span>          <span class="o">=</span>  <span class="mf">233.110559</span> <span class="o">+/-</span> <span class="mf">8.207753</span>   <span class="p">(</span><span class="n">init</span><span class="o">=</span>  <span class="mf">250.000000</span><span class="p">)</span>
  
 <span class="p">[[</span><span class="n">Correlations</span><span class="p">]]</span>    <span class="p">(</span><span class="n">unreported</span> <span class="n">correlations</span> <span class="n">are</span> <span class="o">&lt;</span>  <span class="mf">0.100</span><span class="p">)</span>
    <span class="n">amp</span><span class="p">,</span> <span class="n">theta</span>           <span class="o">=</span> <span class="o">-</span><span class="mf">0.858</span>
@@ -1168,7 +1168,7 @@ of <span class="math notranslate nohighlight">\(R\)</span>. The output for this 
      <span class="n">reff</span>   <span class="o">=</span>  <span class="mf">2.54780</span>
      <span class="n">degen</span>  <span class="o">=</span>  <span class="mf">12.000000</span>
      <span class="n">n</span><span class="o">*</span><span class="n">s02</span>  <span class="o">=</span>  <span class="mf">0.869093</span> <span class="o">+/-</span> <span class="mf">0.030460</span>  <span class="s1">&#39;amp&#39;</span>
-     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612595</span>  <span class="s1">&#39;del_e0&#39;</span>
+     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612594</span>  <span class="s1">&#39;del_e0&#39;</span>
      <span class="n">r</span>      <span class="o">=</span>  <span class="mf">2.547394</span> <span class="o">+/-</span> <span class="mf">0.002786</span>  <span class="s1">&#39;reff + dr_off + 10*alpha*reff&#39;</span>
      <span class="n">deltar</span> <span class="o">=</span> <span class="o">-</span><span class="mf">0.000406</span> <span class="o">+/-</span> <span class="mf">0.002786</span>  <span class="s1">&#39;dr_off + 10*alpha*reff&#39;</span>
      <span class="n">sigma2</span> <span class="o">=</span>  <span class="mf">0.003275</span> <span class="o">+/-</span> <span class="mf">0.000115</span>  <span class="s1">&#39;sigma2_eins(10, theta)&#39;</span>
@@ -1181,7 +1181,7 @@ of <span class="math notranslate nohighlight">\(R\)</span>. The output for this 
      <span class="n">reff</span>   <span class="o">=</span>  <span class="mf">2.54780</span>
      <span class="n">degen</span>  <span class="o">=</span>  <span class="mf">12.000000</span>
      <span class="n">n</span><span class="o">*</span><span class="n">s02</span>  <span class="o">=</span>  <span class="mf">0.869093</span> <span class="o">+/-</span> <span class="mf">0.030460</span>  <span class="s1">&#39;amp&#39;</span>
-     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612595</span>  <span class="s1">&#39;del_e0&#39;</span>
+     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612594</span>  <span class="s1">&#39;del_e0&#39;</span>
      <span class="n">r</span>      <span class="o">=</span>  <span class="mf">2.548002</span> <span class="o">+/-</span> <span class="mf">0.002544</span>  <span class="s1">&#39;reff + dr_off + 50*alpha*reff&#39;</span>
      <span class="n">deltar</span> <span class="o">=</span>  <span class="mf">0.000202</span> <span class="o">+/-</span> <span class="mf">0.002544</span>  <span class="s1">&#39;dr_off + 50*alpha*reff&#39;</span>
      <span class="n">sigma2</span> <span class="o">=</span>  <span class="mf">0.003337</span> <span class="o">+/-</span> <span class="mf">0.000128</span>  <span class="s1">&#39;sigma2_eins(50, theta)&#39;</span>
@@ -1194,7 +1194,7 @@ of <span class="math notranslate nohighlight">\(R\)</span>. The output for this 
      <span class="n">reff</span>   <span class="o">=</span>  <span class="mf">2.54780</span>
      <span class="n">degen</span>  <span class="o">=</span>  <span class="mf">12.000000</span>
      <span class="n">n</span><span class="o">*</span><span class="n">s02</span>  <span class="o">=</span>  <span class="mf">0.869093</span> <span class="o">+/-</span> <span class="mf">0.030460</span>  <span class="s1">&#39;amp&#39;</span>
-     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612595</span>  <span class="s1">&#39;del_e0&#39;</span>
+     <span class="n">e0</span>     <span class="o">=</span>  <span class="mf">5.374313</span> <span class="o">+/-</span> <span class="mf">0.612594</span>  <span class="s1">&#39;del_e0&#39;</span>
      <span class="n">r</span>      <span class="o">=</span>  <span class="mf">2.549525</span> <span class="o">+/-</span> <span class="mf">0.002960</span>  <span class="s1">&#39;reff + dr_off + 150*alpha*reff&#39;</span>
      <span class="n">deltar</span> <span class="o">=</span>  <span class="mf">0.001725</span> <span class="o">+/-</span> <span class="mf">0.002960</span>  <span class="s1">&#39;dr_off + 150*alpha*reff&#39;</span>
      <span class="n">sigma2</span> <span class="o">=</span>  <span class="mf">0.005030</span> <span class="o">+/-</span> <span class="mf">0.000299</span>  <span class="s1">&#39;sigma2_eins(150, theta)&#39;</span>
@@ -2051,7 +2051,7 @@ powerful, and give increased confidence in the refined structure.</p>
         <li class="right" >
           <a href="feffpaths.html" title="9.7. XAFS: Reading and using Feff Paths"
              >previous</a> |</li>
-   <li>[<a href="../index.html"> Larch Home</a>|</li>
+   <li>[<a href="../index.html"> Larch</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
    <li><a href="index.html">XAFS Analysis</a>|</li>
    <li><a href="../xray/index.html">X-ray Databases</a>|</li>
