--- a/community.html
+++ b/community.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>2. Larch Community and Support &#8212; larch 0.9.39 documentation</title>
+    <title>2. Larch Community and Support &#8212; larch 0.9.40 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -54,7 +54,7 @@
         <li class="right" >
           <a href="installation.html" title="1. Downloading and Installation"
              accesskey="P">previous</a> |</li>
-   <li>[<a href="index.html"> Larch Home</a>|</li>
+   <li>[<a href="index.html"> Larch</a>|</li>
    <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
@@ -128,7 +128,7 @@ submit bug reports.</p>
         <li class="right" >
           <a href="installation.html" title="1. Downloading and Installation"
              >previous</a> |</li>
-   <li>[<a href="index.html"> Larch Home</a>|</li>
+   <li>[<a href="index.html"> Larch</a>|</li>
    <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
