--- a/fitting/fitpeaks.html
+++ b/fitting/fitpeaks.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>8.7. Simplified Peak Fitting with fit_peak() &#8212; larch 0.9.39 documentation</title>
+    <title>8.7. Simplified Peak Fitting with fit_peak() &#8212; larch 0.9.40 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -54,7 +54,7 @@
         <li class="right" >
           <a href="examples.html" title="8.6. Fit Examples"
              accesskey="P">previous</a> |</li>
-   <li>[<a href="../index.html"> Larch Home</a>|</li>
+   <li>[<a href="../index.html"> Larch</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
    <li><a href="../xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="../xray/index.html">X-ray Databases</a>|</li>
@@ -450,7 +450,7 @@ parameters, and allows building more complex models.</p>
         <li class="right" >
           <a href="examples.html" title="8.6. Fit Examples"
              >previous</a> |</li>
-   <li>[<a href="../index.html"> Larch Home</a>|</li>
+   <li>[<a href="../index.html"> Larch</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
    <li><a href="../xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="../xray/index.html">X-ray Databases</a>|</li>
