--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Larch &#8212; larch 0.9.39 documentation</title>
+    <title>Larch &#8212; larch 0.9.40 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -50,7 +50,7 @@
         <li class="right" >
           <a href="getting_started.html" title="Getting Started with Larch"
              accesskey="N">next</a> |</li>
-   <li>[<a href="#"> Larch Home</a>|</li>
+   <li>[<a href="#"> Larch</a>|</li>
    <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
@@ -63,7 +63,7 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
 <h3> Get Larch</h3>
-<p>Current version: <b>0.9.39</b></p>
+<p>Current version: <b>0.9.40</b></p>
 
 &nbsp; &nbsp; <a href="installation.html">Install Latest Version</a>  <br>
 &nbsp; &nbsp; <a href="http://github.com/xraypy/xraylarch"> Development Version</a> <br>
@@ -246,7 +246,7 @@ Foundation.</p>
         <li class="right" >
           <a href="getting_started.html" title="Getting Started with Larch"
              >next</a> |</li>
-   <li>[<a href="#"> Larch Home</a>|</li>
+   <li>[<a href="#"> Larch</a>|</li>
    <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
