--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Larch &#8212; larch 0.9.41 documentation</title>
+    <title>Larch &#8212; larch 0.9.42 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -66,7 +66,7 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
 <h3> Get Larch</h3>
-<p>Current version: <b>0.9.41</b></p>
+<p>Current version: <b>0.9.42</b></p>
 
 &nbsp; &nbsp; <a href="installation.html">Install Latest Version</a>  <br>
 &nbsp; &nbsp; <a href="http://github.com/xraypy/xraylarch"> Development Version</a> <br>
@@ -156,9 +156,9 @@ Interface, CLI = Command Line Interface, and <cite>beta</cite> indicates a
 work in progress.</div></blockquote>
 <table border="1" class="last docutils">
 <colgroup>
-<col width="31%" />
-<col width="15%" />
-<col width="54%" />
+<col width="24%" />
+<col width="12%" />
+<col width="63%" />
 </colgroup>
 <thead valign="bottom">
 <tr class="row-odd"><th class="head">Application Name</th>
@@ -173,38 +173,37 @@ work in progress.</div></blockquote>
 </tr>
 <tr class="row-odd"><td>larch_gui</td>
 <td>GUI</td>
-<td>enhanced command-lne interface
-with data browser</td>
+<td>enhanced command-lne interface with data browser</td>
 </tr>
 <tr class="row-even"><td>gse_mapviewer</td>
 <td>GUI</td>
-<td>XRF Map Viewer for data from the
-GSECARS X-ray microprobe</td>
+<td>XRF Map Viewer for GSECARS X-ray microprobe data.</td>
 </tr>
 <tr class="row-odd"><td>xas_viewer</td>
 <td>GUI</td>
-<td>Display XANES data, and Pre-edge
-Peak Fitting.</td>
+<td>Display XANES data, and Pre-edge Peak Fitting.</td>
 </tr>
 <tr class="row-even"><td>xrfdisplay</td>
 <td>GUI</td>
-<td>Display XRF Spectra</td>
+<td>Display and analyze XRF Spectra.</td>
 </tr>
-<tr class="row-odd"><td>1D XRD Viewer</td>
+<tr class="row-odd"><td>Dioptas</td>
 <td>GUI</td>
-<td>Display and work with XRD diffraction
-patterns (beta).</td>
+<td>Display XRD images, calibrate to XRD patterns.</td>
 </tr>
-<tr class="row-even"><td>2D XRD Viewer</td>
+<tr class="row-even"><td>1D XRD Viewer</td>
 <td>GUI</td>
-<td>Display and work with XRD diffraction
-images (beta).</td>
+<td>Display and work with 1-D XRD patterns (beta).</td>
 </tr>
-<tr class="row-odd"><td>feff6l</td>
+<tr class="row-odd"><td>2D XRD Viewer</td>
+<td>GUI</td>
+<td>Display  XRD images (beta)</td>
+</tr>
+<tr class="row-even"><td>feff6l</td>
 <td>CLI</td>
 <td>Feff 6 EXAFS calculations</td>
 </tr>
-<tr class="row-even"><td>feff8l</td>
+<tr class="row-odd"><td>feff8l</td>
 <td>CLI</td>
 <td>Feff 8 EXAFS calculations - no XANES</td>
 </tr>
