--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Larch &#8212; larch 0.9.42 documentation</title>
+    <meta charset="utf-8" />
+    <title>Larch &#8212; larch 0.9.43 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -66,7 +64,7 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
 <h3> Get Larch</h3>
-<p>Current version: <b>0.9.42</b></p>
+<p>Current version: <b>0.9.43</b></p>
 
 &nbsp; &nbsp; <a href="installation.html">Install Latest Version</a>  <br>
 &nbsp; &nbsp; <a href="http://github.com/xraypy/xraylarch"> Development Version</a> <br>
@@ -97,8 +95,6 @@ Mailing List</a> / <a href="community.html"> Community</a><br>
     <form class="search" action="search.html" method="get">
       <input type="text" name="q" />
       <input type="submit" value="Go" />
-      <input type="hidden" name="check_keywords" value="yes" />
-      <input type="hidden" name="area" value="default" />
     </form>
     </div>
 </div>
@@ -127,10 +123,10 @@ enough for advanced data processing and analysis.</p>
 <p>Larch has several related target application areas:</p>
 <blockquote>
 <div><ul class="simple">
-<li>XAFS analysis, becoming version 2 of the Ifeffit Package for EXAFS analysis.</li>
-<li>Visualizing and analyzing micro-X-ray fluorescence and X-ray diffraction maps.</li>
-<li>Quantitative X-ray fluorescence analysis.</li>
-<li>Data collection software for synchrotron data.</li>
+<li><p>XAFS analysis, becoming version 2 of the Ifeffit Package for EXAFS analysis.</p></li>
+<li><p>Visualizing and analyzing micro-X-ray fluorescence and X-ray diffraction maps.</p></li>
+<li><p>Quantitative X-ray fluorescence analysis.</p></li>
+<li><p>Data collection software for synchrotron data.</p></li>
 </ul>
 </div></blockquote>
 <p>A key idea is that these otherwise different application areas can share many
@@ -148,64 +144,64 @@ scientific Python environment and several applications.</p>
 <p>The following table lists the main Larch applications.  New and
 in-development features and application will be explicitly described as
 “beta”.</p>
-<dl class="docutils" id="larch-app-table">
-<dt><strong>Table of Larch Applications and Programs</strong></dt>
-<dd><blockquote class="first">
-<div>The applications installed with Larch. Here, GUI = Graphical User
+<dl id="larch-app-table">
+<dt><strong>Table of Larch Applications and Programs</strong></dt><dd><blockquote>
+<div><p>The applications installed with Larch. Here, GUI = Graphical User
 Interface, CLI = Command Line Interface, and <cite>beta</cite> indicates a
-work in progress.</div></blockquote>
-<table border="1" class="last docutils">
+work in progress.</p>
+</div></blockquote>
+<table class="docutils align-center">
 <colgroup>
-<col width="24%" />
-<col width="12%" />
-<col width="63%" />
+<col style="width: 24%" />
+<col style="width: 12%" />
+<col style="width: 63%" />
 </colgroup>
-<thead valign="bottom">
-<tr class="row-odd"><th class="head">Application Name</th>
-<th class="head">GUI / CLI</th>
-<th class="head">Description</th>
+<thead>
+<tr class="row-odd"><th class="head"><p>Application Name</p></th>
+<th class="head"><p>GUI / CLI</p></th>
+<th class="head"><p>Description</p></th>
 </tr>
 </thead>
-<tbody valign="top">
-<tr class="row-even"><td>larch</td>
-<td>CLI</td>
-<td>simple command-lne interface</td>
+<tbody>
+<tr class="row-even"><td><p>larch</p></td>
+<td><p>CLI</p></td>
+<td><p>simple command-lne interface</p></td>
 </tr>
-<tr class="row-odd"><td>larch_gui</td>
-<td>GUI</td>
-<td>enhanced command-lne interface with data browser</td>
+<tr class="row-odd"><td><p>larch_gui</p></td>
+<td><p>GUI</p></td>
+<td><p>enhanced command-lne interface with data browser</p></td>
 </tr>
-<tr class="row-even"><td>gse_mapviewer</td>
-<td>GUI</td>
-<td>XRF Map Viewer for GSECARS X-ray microprobe data.</td>
+<tr class="row-even"><td><p>gse_mapviewer</p></td>
+<td><p>GUI</p></td>
+<td><p>XRF Map Viewer for GSECARS X-ray microprobe data.</p></td>
 </tr>
-<tr class="row-odd"><td>xas_viewer</td>
-<td>GUI</td>
-<td>Display XANES data, and Pre-edge Peak Fitting.</td>
+<tr class="row-odd"><td><p>xas_viewer</p></td>
+<td><p>GUI</p></td>
+<td><p>Display XANES data, and Pre-edge Peak Fitting.</p></td>
 </tr>
-<tr class="row-even"><td>xrfdisplay</td>
-<td>GUI</td>
-<td>Display and analyze XRF Spectra.</td>
+<tr class="row-even"><td><p>xrfdisplay</p></td>
+<td><p>GUI</p></td>
+<td><p>Display and analyze XRF Spectra.</p></td>
 </tr>
-<tr class="row-odd"><td>Dioptas</td>
-<td>GUI</td>
-<td>Display XRD images, calibrate to XRD patterns.</td>
+<tr class="row-odd"><td><p>Dioptas</p></td>
+<td><p>GUI</p></td>
+<td><p>Display XRD images, calibrate to XRD patterns.</p></td>
 </tr>
-<tr class="row-even"><td>1D XRD Viewer</td>
-<td>GUI</td>
-<td>Display and work with 1-D XRD patterns (beta).</td>
+<tr class="row-even"><td><p>1D XRD Viewer</p></td>
+<td><p>GUI</p></td>
+<td><p>Display and work with 1-D XRD patterns (beta).</p></td>
 </tr>
-<tr class="row-odd"><td>2D XRD Viewer</td>
-<td>GUI</td>
-<td>Display  XRD images (beta)</td>
+<tr class="row-odd"><td><p>2D XRD Viewer</p></td>
+<td><p>GUI</p></td>
+<td><p>Display  XRD images (beta)</p></td>
 </tr>
-<tr class="row-even"><td>feff6l</td>
-<td>CLI</td>
-<td>Feff 6 EXAFS calculations</td>
+<tr class="row-even"><td><p>feff6l</p></td>
+<td><p>CLI</p></td>
+<td><p>Feff 6 EXAFS calculations</p></td>
 </tr>
-<tr class="row-odd"><td>feff8l</td>
-<td>CLI</td>
-<td>Feff 8 EXAFS calculations - no XANES</td>
+<tr class="row-odd"><td><p>feff8l</p></td>
+<td><p>CLI</p></td>
+<td><p>Feff 8 EXAFS calculations - no XANES</p></td>
 </tr>
 </tbody>
 </table>
@@ -258,8 +254,8 @@ Foundation.</p>
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright Matthew Newville, The University of Chicago, 2018.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.4.
+        &#169; Copyright Matthew Newville, The University of Chicago, 2019.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.0.1.
     </div>
   </body>
 </html>
