--- a/guis/index.html
+++ b/guis/index.html
@@ -1,10 +1,12 @@
 
 
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>4. Larch GUIs &#8212; larch 0.9.43 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -86,6 +88,8 @@
     <form class="search" action="../search.html" method="get">
       <input type="text" name="q" />
       <input type="submit" value="Go" />
+      <input type="hidden" name="check_keywords" value="yes" />
+      <input type="hidden" name="area" value="default" />
     </form>
     </div>
 </div>
@@ -106,9 +110,9 @@ inter-related, so that they can bring up the other windows for displaying,
 interacting, and processing data.  The main GUIs for Larch are</p>
 <blockquote>
 <div><ul class="simple">
-<li><p><cite>GSE_Mapviewer</cite>: viewing XRF maps from  X-ray microprobes.</p></li>
-<li><p><cite>XAS_Viewer</cite>: read and view XAS data, do simple normalization, and pre-edge peak fitting.</p></li>
-<li><p><cite>larch_gui</cite>: simple command-line + data browser for Larch.</p></li>
+<li><cite>GSE_Mapviewer</cite>: viewing XRF maps from  X-ray microprobes.</li>
+<li><cite>XAS_Viewer</cite>: read and view XAS data, do simple normalization, and pre-edge peak fitting.</li>
+<li><cite>larch_gui</cite>: simple command-line + data browser for Larch.</li>
 </ul>
 </div></blockquote>
 <p>More details and screenshots are shown in the following pages.</p>
@@ -160,7 +164,7 @@ interacting, and processing data.  The main GUIs for Larch are</p>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2019.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.0.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.5.
     </div>
   </body>
 </html>
