update docs for 0.9.46 release

--- a/genindex.html
+++ b/genindex.html
@@ -1,14 +1,12 @@
 
 
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; larch 0.9.45 documentation</title>
+    <meta charset="utf-8" />
+    <title>Index &#8212; larch 0.9.46 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -28,11 +26,11 @@
 
   </head><body>
 <div style=" color: #c5daba;  text-align: left; height:65px; padding: 0px">
-<table border=1>
+<table border=0>
   <tr>
     <td width=20%>
 	<a href="index.html">
-	 <img src="_static/larchcones.png" height=60px alt="larchcones"/></a>
+	 <img src="_static/larchcones.png" height=50px alt="larchcones"/></a>
     </td>
     <td width=75% padding=0>
       <font size=+2>
@@ -63,13 +61,11 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
 <div id="searchbox" style="display: none" role="search">
-  <h3>Quick search</h3>
+  <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
     <form class="search" action="search.html" method="get">
-      <input type="text" name="q" />
+      <input type="text" name="q" aria-labelledby="searchlabel" />
       <input type="submit" value="Go" />
-      <input type="hidden" name="check_keywords" value="yes" />
-      <input type="hidden" name="area" value="default" />
     </form>
     </div>
 </div>
@@ -115,20 +111,18 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="devel/plugins.html#larch._builtin.add_plugin">_builtin.add_plugin() (in module larch)</a>
+      <li><a href="devel/plugins.html#_builtin.add_plugin">_builtin.add_plugin() (built-in function)</a>
 </li>
       <li><a href="xafs/feffpaths.html#index-1">_feffdat File Group</a>
 </li>
-      <li><a href="data/index.html#module-_io">_io (module)</a>, <a href="data/index.html#module-_io">[1]</a>
-</li>
-      <li><a href="data/index.html#module-_io.AthenaProject">_io.AthenaProject (module)</a>
+      <li><a href="data/index.html#module-_io">_io (module)</a>
 </li>
       <li><a href="fitting/fitpeaks.html#module-_math">_math (module)</a>, <a href="fitting/index.html#module-_math">[1]</a>, <a href="fitting/minimize.html#module-_math">[2]</a>, <a href="fitting/parameters.html#module-_math">[3]</a>, <a href="xafs/xanes.html#module-_math">[4]</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="plotting/index.html#module-_plotter">_plotter (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tutorial/procedures.html#index-0">_sys variables</a>
 </li>
       <li><a href="fitting/parameters.html#index-0">_sys.fiteval</a>
@@ -147,7 +141,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tutorial/builtins.html#abs">abs() (built-in function)</a>
 </li>
-      <li><a href="data/index.html#_io.AthenaProject.add_group">add_group() (in module _io.AthenaProject)</a>
+      <li><a href="data/index.html#_io.add_group">add_group() (in module _io)</a>
 </li>
       <li><a href="tutorial/builtins.html#add_plugin">add_plugin() (built-in function)</a>
 </li>
@@ -167,7 +161,7 @@
 </li>
       <li><a href="tutorial/arrays.html#index-2">array methods</a>
 </li>
-      <li><a href="data/index.html#_io.AthenaProject.as_group">as_group() (in module _io.AthenaProject)</a>
+      <li><a href="data/index.html#_io.as_group">as_group() (in module _io)</a>
 </li>
       <li><a href="data/index.html#_io.AthenaProject">AthenaProject (class in _io)</a>
 </li>
@@ -423,7 +417,7 @@
 </li>
       <li><a href="xray/index.html#_xray.incoherent_xsec">incoherent_xsec() (in module _xray)</a>
 </li>
-      <li><a href="devel/plugins.html#larch.initializeLarchPlugin">initializeLarchPlugin() (in module larch)</a>
+      <li><a href="devel/plugins.html#initializeLarchPlugin">initializeLarchPlugin() (built-in function)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -449,7 +443,7 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="devel/frompython.html#module-larch">larch (module)</a>, <a href="devel/plugins.html#module-larch">[1]</a>
+      <li><a href="devel/frompython.html#module-larch">larch (module)</a>, <a href="devel/index.html#module-larch">[1]</a>
 </li>
       <li><a href="tutorial/builtins.html#len">len() (built-in function)</a>
 </li>
@@ -607,7 +601,7 @@
 </li>
       <li><a href="tutorial/builtins.html#raw_input">raw_input() (built-in function)</a>
 </li>
-      <li><a href="data/index.html#_io.AthenaProject.read">read() (in module _io.AthenaProject)</a>
+      <li><a href="data/index.html#_io.read">read() (in module _io)</a>
 </li>
       <li><a href="data/index.html#_io.read_ascii">read_ascii() (in module _io)</a>
 </li>
@@ -651,12 +645,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="data/index.html#_io.save">save() (in module _io)</a>
-
-      <ul>
-        <li><a href="data/index.html#_io.AthenaProject.save">(in module _io.AthenaProject)</a>
+      <li><a href="data/index.html#_io.save">save() (in module _io)</a>, <a href="data/index.html#_io.save">[1]</a>
 </li>
-      </ul></li>
       <li><a href="plotting/index.html#_plotter.save_image">save_image() (in module _plotter)</a>
 </li>
       <li><a href="plotting/index.html#_plotter.save_plot">save_plot() (in module _plotter)</a>
@@ -719,13 +709,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tutorial/builtins.html#unichr">unichr() (built-in function)</a>
 </li>
-      <li><a href="tutorial/builtins.html#unicode">unicode() (built-in function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="plotting/index.html#_plotter.update_trace">update_trace() (in module _plotter)</a>
+      <li><a href="tutorial/builtins.html#unicode">unicode() (built-in function)</a>
 </li>
-      <li><a href="devel/frompython.html#larch.use_plugin_path">use_plugin_path() (in module larch)</a>
+      <li><a href="plotting/index.html#_plotter.update_trace">update_trace() (in module _plotter)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -818,7 +806,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2019.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.5.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.1.2.
     </div>
   </body>
 </html>
